Fixed overflow in library and wishlist.

--- a/Final-Book-Blog/frontend/src/app/body-wish-list/body-wish-list.component.css
+++ b/Final-Book-Blog/frontend/src/app/body-wish-list/body-wish-list.component.css
@@ -43,3 +43,17 @@
   padding-right: 2%;
   font-weight: 500;
 }
+
+.content #author, .content #genre, .content #series, .content #status {
+  max-height: 50px;
+}
+
+.section p {
+  margin-top: 10px;
+}
+
+.overflow {
+  max-width: 80%;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
